--- a/page.html
+++ b/page.html
@@ -56,9 +56,19 @@ li {
   text-indent: 10px;
 
 }
+
 li span{
 	position: absolute;
 	right:120px;
+}
+li span:nth-child(1){
+    position: absolute;
+    left: 0px;
+    overflow: hidden;
+    width: 360px;
+    height: 42px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 #todo input{
   width:400px;
@@ -69,9 +79,6 @@ li span{
 }
 #todo{
     font-family: 'Avenir', Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  
   color: #2c3e50;
   margin-top: 60px;
 }
@@ -151,8 +158,6 @@ li span{
     <div id="app">
     <section id="signInAndSignUp" v-if="currentUser===null" v-cloak>
         <div class="formType">
-<!--           <label><input type="radio" name="type" value="signUp" v-model="actionType">注册</label>
-          <label><input type="radio" name="type" value="login" v-model="actionType">登入</label> -->
           <a href="#"  @click.prevent="changBtn('signup')" :class="{clickColor:isSignColor}">注册</a>
           <a href="#"  @click.prevent="changBtn('login')"  :class="{clickColor:isLoginColor}">登入</a>
         </div>
@@ -188,12 +193,12 @@ li span{
       <h1>{{ loginName }}{{ msg }}</h1>
       <div class="logOutBtn"><a href="#" @click.prevent=logOut>登出</a></div>
       
-      <div class="inp"><input v-model='newItem' v-on:keyup.enter='addList'></div>
+      <div class="inp"><input v-model='newItem' v-on:keyup.enter='addList' placeholder="建议不输入超过21个汉字"></div>
       
       <ul>
-        <li v-for="(item,index) in items" :class="{finish:item.isfinish}">
+        <li v-for="(item,index) in items" >
 
-        {{ item.listcnt }}
+        <span :class="{finish:item.isfinish}">{{ item.listcnt }}</span>
         <span>{{ item.time }}</span>
         <a src='#' v-on:click.prevent='isfinish(item)' class="btn btn-nice">完成</a>
         <a src='#' v-on:click.prevent='isdelete(index)' class="btn btn-deleta">删除</a>
