--- a/page.html
+++ b/page.html
@@ -3,9 +3,9 @@
     <meta charset=utf-8>
     <style>
     	*{
-  padding: 0;
-  margin:0;
-font-family:'微软雅黑';
+        padding: 0;
+        margin:0;
+      font-family:'微软雅黑';
 }
 html{
   background: #F5FFFA;
@@ -56,11 +56,11 @@ li {
   text-indent: 10px;
   transition: 0.5s;
 }
-li:hover{
+/*li:hover{
   box-shadow:3px 3px 5px rgba(0,0,0,0.25);
   transform:scale(1.5,1.5);
   transition: 0.5s;
-}
+}*/
 
 li span{
 	position: absolute;
